# dsrp-machine-learning-engineering-3

./: README.md  main.py  pyproject.toml
grafana-ml-monitoring/: docker-compose.yml  main.py  ml_monitoring.ipynb  pyproject.toml
notebooks/: Untitled Notebook 2025-10-22 20_21_38.ipynb  counterfactual_analysis.ipynb  fairness.ipynb  interpretabilidad.ipynb  metricas.ipynb  shap.html
