[project]
name = "dsrp-machine-learning-engineering-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.3",
    "hyperopt>=0.2.7",
    "jupyterlab",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "optuna>=4.5.0",
    "pandas",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "sklearn-genetic-opt>=0.12.0",
    "xgboost>=3.0.5",
]

[tool.uv.workspace]
members = [
    "grafana-ml-monitoring",
]
